# ic4

./: .env  .gitignore  LICENSE  Makefile  Makefile.skel  README.md  configure  discover  meson.build
ic4/: __main__.py  assembler.py  machine.py  string_utilities.py  utilities.py  version.py
ic4/assembler/: .gitignore  README.md  __init__.py  assembler.py  codegen.py  commands.py  expressions.py  lexer.py  parser.py
ic4/assembly/: README.md  __init__.py  commands.py  expressions.py  lexer.py  parser.py  srcfile.py
src/: meson.build  test_main.c  test_tests.c
src/assembler/: README.md  codegen.py  commands.py  expressions.py  instructions.py  parser.py
src/misc/: bookmark.h  charescape.h  errors.h  queue.c  queue.h  stack_trace.h  test_bookmark.c  test_discovery.py  test_queue.c  test_streamcompare.c  test_streamcompare.h  test_streamcompare.h.old  xml.c  xml.h
src/preprocessor/: char_stream.c  char_stream.h  directives.c  directives.h  enum_strings.h  filemanager.c  filemanager.h  interpreter.h  interpreterco.h  lines.c  lines.h  linesco.h  meson.build  messages.cat  pp_tok_tostring.h  test_directives.c  test_lines.c  test_tokenizer.c  test_tokenizer.c.old  test_tokenizer_n.c  tokenizer.c  tokenizer.h  tokenizerco.h  tokenizerio.h
tests/: meson.build  tap.c  tap.h  test_tap.c
tests/assembler/: hello.ints  test_assembler.py  test_codegen.py  test_end_to_end.py  test_lexer.py  test_log_grammar.py  test_parser.py
tests/assembly/: test_expressions.py  test_lexer.py  (+1 more)
utils/: Makefile.skel  discover  stats.sh  test_discovery.py  test_main.c.skel
(+54 files in other folders)
